--- a/create-slurm-cluster-ansible/roles/slurm-controller/templates/slurmdbd.conf.j2
+++ b/create-slurm-cluster-ansible/roles/slurm-controller/templates/slurmdbd.conf.j2
@@ -8,6 +8,5 @@ StorageLoc={{ slurmdbd_dbname }}
 StoragePass={{ slurmdbd_password }}
 StorageUser={{ slurmdbd_user }}
 LogFile=/var/log/slurm/slurmdbd.log
-PidFile=/var/run/slurmdbd.pid 
-DbdHost={{ slurm_cluster_name }}
-SlurmdbdDebug=info
+PidFile=/var/run/slurmdbd/slurmdbd.pid 
+DbdHost={{ slurm_control_machine }} 
